# ocaml-sat-solvers

./: .dune-release.toml  .gitignore  CHANGES.md  Config  Config.default  Config.include  Makefile  README.md  SatCompile  Solvers.default  _oasis  _tags  dune-project  myocamlbuild.ml  ocaml-sat-solvers.opam  opam-local.sh  setup.ml
archive/z3/: z3wrapper.mli
demos/: dune  tester1.ml  tester2.ml  tester3.ml
deprecated/: configure.ml
deprecated/minisat/: minisat.mli  minisatwrapper.ml  minisatwrapper.mli
deprecated/minisat/backend/: MiniSATWrap.cc
deprecated/picosat/: picosat.ml  picosatwrapper.ml  picosatwrapper.mli
deprecated/picosat/backend/: PicoSATWrap.cc
deprecated/zchaff/: zchaffwrapper.ml
deprecated/zchaff/backend/: ZchaffWrap.cc
opam/: descr  findlib  opam
src/: META  dune  ocaml-sat-solvers.mldylib  ocaml-sat-solvers.mllib  satsolverregistry.ml  satsolvers.ml  satsolvers.mli  satwrapper.ml  satwrapper.mli  timing.ml  timing.mli
src/externalsat/: dune  externalsat.ml  externalsat.mli  satsolutionlexer.ml  satsolutionlexer.mll  satsolutionparser.ml  satsolutionparser.mli  satsolutionparser.mly  satsolutionparserhelper.mli
src/internalsat/: internalsatwrapper.ml  internalsatwrapper.mli
src/minisat/: minisatwrapper.ml  minisatwrapper.mli
src/picosat/: picosat.mli  picosatwrapper.ml
src/preprocessor/: preprocessor.ml  preprocessor.mli
src/pseudosat/: pseudosatwrapper.ml  pseudosatwrapper.mli
src/z3/: z3wrapper.ml  z3wrapper.mli
src/zchaff/: zchaff.ml  zchaff.mli  zchaffwrapper.ml  zchaffwrapper.mli
tester/: tester.ml  tester1.ml
(+4 files in other folders)
